@@ -268,9 +268,9 @@ namespace
     { "help-menu", NULL, N_("_Help") },
     { "set-charset", NULL, N_("Set Character _Encoding..."), NULL, NULL, G_CALLBACK(do_prompt_for_charset) },
     { "read-selected-group", "ICON_READ_MORE", N_("_Read Group"), NULL, NULL, G_CALLBACK(do_read_selected_group) },
-    { "mark-groups-read", GTK_STOCK_CLEAR, N_("_Mark Group _Read"), "<control><shift>M", NULL, G_CALLBACK(do_mark_selected_groups_read) },
-    { "delete-groups-articles", GTK_STOCK_DELETE, N_("_Delete Group's Articles"), "<control><shift>Delete", NULL, G_CALLBACK(do_clear_selected_groups) },
-    { "get-new-headers-in-selected-groups", "ICON_GET_SELECTED", N_("Get New _Headers in Selected Group"), "A", NULL, G_CALLBACK(do_xover_selected_groups) },
+    { "mark-groups-read", GTK_STOCK_CLEAR, N_("_Mark Selected Groups _Read"), "<control><shift>M", NULL, G_CALLBACK(do_mark_selected_groups_read) },
+    { "delete-groups-articles", GTK_STOCK_DELETE, N_("_Delete Selected Groups' Articles"), "<control><shift>Delete", NULL, G_CALLBACK(do_clear_selected_groups) },
+    { "get-new-headers-in-selected-groups", "ICON_GET_SELECTED", N_("Get New _Headers in Selected Groups"), "A", NULL, G_CALLBACK(do_xover_selected_groups) },
     { "get-new-headers-in-subscribed-groups", "ICON_GET_SUBSCRIBED", N_("Get New _Headers in Subscribed Groups"), "<shift>A", NULL, G_CALLBACK(do_xover_subscribed_groups) },
     { "download-headers", "ICON_GET_DIALOG", N_("Get _Headers..."), "", NULL, G_CALLBACK(do_download_headers) },
     { "refresh-group-list", NULL, N_("Refresh Group List"), "", NULL, G_CALLBACK(do_refresh_groups) },
@@ -292,7 +292,7 @@ namespace
     { "add-similar-articles-to-selection", NULL, N_("Add _Similar Articles to Selection"), "<control>S", NULL, G_CALLBACK(do_add_similar_to_selection) },
     { "select-article-body", NULL, N_("Select Article _Body"), NULL, NULL, G_CALLBACK(do_select_article_body) },
     { "show-preferences-dialog", GTK_STOCK_PREFERENCES, N_("Edit _Preferences"), NULL, NULL, G_CALLBACK(do_show_preferences_dialog) },
-    { "show-group-preferences-dialog", GTK_STOCK_PREFERENCES, N_("Edit _Group Preferences"), NULL, NULL, G_CALLBACK(do_show_group_preferences_dialog) },
+    { "show-group-preferences-dialog", GTK_STOCK_PREFERENCES, N_("Edit Selected _Group's Preferences"), NULL, NULL, G_CALLBACK(do_show_group_preferences_dialog) },
     { "show-profiles-dialog", GTK_STOCK_EDIT, N_("Edit P_osting Profiles"), NULL, NULL, G_CALLBACK(do_show_profiles_dialog) },
     { "show-servers-dialog", GTK_STOCK_NETWORK, N_("Edit _News Servers"), NULL, NULL, G_CALLBACK(do_show_servers_dialog) },
 
